<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="app_spotify">SPOTIFY STREAMER</string>
    <string name="app_super_duo_football">FOOTBALL SCORES APP</string>
    <string name="app_super_duo_libray">LIBRARY APP</string>
    <string name="app_build_it">BUILD IT BIGGER</string>
    <string name="app_xyz_reader">XYZ READER</string>
    <string name="app_capstone">CAPSTONE: MY OWN APP</string>


</resources>
